--- a/src/Page/HomeA/Nav/nav.css
+++ b/src/Page/HomeA/Nav/nav.css
@@ -1,39 +1,73 @@
-
 .flexSB {
   display: flex;
   justify-content: space-between;
 }
+
 /*  */
 header {
   background-color: rgba(255, 255, 255, 0.2);
   margin: 0 30px;
 }
+
 header .nav {
   display: flex !important;
 }
+
 header li {
   margin-right: 40px;
 }
+
 header ul {
   padding: 30px 20px;
 }
+
 header ul li a {
   color: #fff;
   font-weight: 500;
   transition: 0.5s;
 }
+
 header ul li a:hover {
   color: #1eb2a6;
 }
+
 .start {
   background-color: #1eb2a6;
   padding: 30px 70px;
   color: #fff;
   clip-path: polygon(20% 0%, 100% 0, 100% 100%, 0% 100%);
 }
+
 .toggle {
   display: none;
 }
+
+a {
+  position: relative;
+  text-decoration: none;
+  color: white;
+  left: 0;
+  letter-spacing: 0.5px;
+  padding: 0 10px;
+}
+
+a::after {
+  content: "";
+  position: absolute;
+  height: 4px;
+  width: 0;
+  left: 0;
+  top: 100%;
+  border-radius: 2px;
+  background-color: rgb(37, 186, 29);
+  transition: 0.5s;
+  box-shadow: 0px 0px 8px rgb(229, 92, 7);
+}
+
+a:hover::after {
+  width: 100%;
+}
+
 /*--------header------------*/
 @media screen and (max-width: 768px) {
 
@@ -42,9 +76,11 @@ header ul li a:hover {
     background-color: #1eb2a6;
     position: relative;
   }
+
   header ul.flexSB {
     display: none;
   }
+
   .toggle {
     display: block;
     background: none;
